# rhino-grasshopper-mcp

./: .gitignore  LICENSE  README.md  README_OLD.md  pyproject.toml
grasshopper_mcp/: __init__.py  __main__.py  component_library.py  layout_learner.py
grasshopper_mcp/mentoring/: advanced_layout_learner.py  alternative_suggester.py  feature_extractor.py  ml_layout_learner.py  performance_predictor.py
rhino_grasshopper_mcp/: bridge.py  code_generator.py  gh_file_ops.py  rhino_bridge.py
rhino_grasshopper_mcp/mentoring/: __init__.py  auto_grouper.py  crossing_minimizer.py  persistent_layout_learner.py  wire_crossing_detector.py  y_order_learner.py
rhino_listener/: rhino_bridge_listener.py  test.gh
